# valinor

./: Cargo.toml  README.md  setup.sh  valinor.yaml
src/: main.rs
src/analyzers/: detect_secret.rs  mod.rs
src/frontend/: mod.rs  server.rs
src/frontend/css/: main.css
src/frontend/templates/: home.html
src/internals/: filetype_identifier.rs  folder_processing.rs  mod.rs
src/parsers/: docx.rs  mod.rs  pdf.rs
src/utils/: logger.rs
