[package]
name = "valinor"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
mime_guess = "2.0"
log = "0.4"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
warp = "0.3"
tokio = { version = "1", features = ["full", "signal"] }
tera = "1.6" # pour le moteur de templates
actix-web = "4.0.0-beta.10"
actix-files = "0.6"
actix-rt = "2.2.0"
ctrlc = "3.1.9"
rust-embed = "6"
